Bug 262290 - kimg_xcf crashes after a period of hogging all resources
Summary: kimg_xcf crashes after a period of hogging all resources
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kimgio (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-06 12:04 UTC by Marius Karthaus
Modified: 2011-01-08 20:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
unpack this tgz to get the thumbnail that causes the problem (warning your system may crash) (7.47 KB, application/x-compressed-tar)
2011-01-06 12:04 UTC, Marius Karthaus
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marius Karthaus 2011-01-06 12:04:46 UTC
Created attachment 55638 [details]
unpack this tgz to get the thumbnail that causes the problem (warning your system may crash)

Version:           4.5 (using KDE 4.5.85) 
OS:                Linux

The attached .tgz contains an .xcf file that causes kio thumbnail to run havoc on a system. It is causing my PC to become unresponsive until oom killer starts killing processes.

Reproducible: Always

Steps to Reproduce:
unpack attached .tgz file in a folder. Browse to that folder with dolphin. Dolphin will call kio_thumbnail to create a preview and voila.

Actual Results:  
unresponsive system, crash

Expected Results:  
nice thumbnail

Don't forget to save your work before trying to reproduce.
Comment 1 Christoph Feck 2011-01-06 16:37:26 UTC
Thanks for the test case. Does GIMP open the file correctly?
Comment 2 Christoph Feck 2011-01-08 20:08:02 UTC
Actually, this is not a GIMP file, but a .8BPS file, which seems to be generated by PhotoShop. It should not cause this bug, though.
Comment 3 Christoph Feck 2011-01-08 20:38:13 UTC
SVN commit 1212956 by cfeck:

Verify XCF header when reading

Appearantly, Qt can call read() on images without a prior call to
canRead() if the file extension matches. Possibly other loaders
have to be checked/fixed, too.

BUG: 262290


 M  +4 -0      xcf.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1212956