Verify XCF header when reading

Appearantly, Qt can call read() on images without a prior call to
canRead() if the file extension matches. Possibly other loaders
have to be checked/fixed, too.

BUG: 262290

svn path=/trunk/KDE/kdelibs/; revision=1212956